[gd_scene load_steps=4 format=3 uid="uid://bi5iux0coh6t2"]

[ext_resource type="Script" path="res://Scenes/UI/pause_menu.gd" id="1_vsywb"]

[sub_resource type="SystemFont" id="SystemFont_j87ba"]
font_names = PackedStringArray("Impact")

[sub_resource type="SystemFont" id="SystemFont_857ch"]
font_names = PackedStringArray("Impact")

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 20
script = ExtResource("1_vsywb")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="LevelCompletedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_j87ba")
theme_override_font_sizes/font_size = 64
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_857ch")
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="RespawnButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_857ch")
theme_override_font_sizes/font_size = 32
text = "Respawn"

[node name="QuitToMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_fonts/font = SubResource("SystemFont_857ch")
theme_override_font_sizes/font_size = 32
text = "Quit To Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RespawnButton" to="." method="_on_respawn_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitToMenuButton" to="." method="_on_quit_to_menu_button_pressed"]
